--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,13 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_movie_detail">Movie Detail</string>
     <string name="title_activity_settings">Settings</string>
+    <string name="title_movie_sort_order">Movies Sort Order</string>
+    <string-array name="movies_order_by">
+        <item>Most Popular</item>
+        <item>Highest Rated</item>
+    </string-array>
+    <string-array name="movies_order_alias">
+        <item>most_popular</item>
+        <item>highest_rated</item>
+    </string-array>
 </resources>
